--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -12,8 +12,17 @@
     "organize_activity": "Organize Activity",
     "place": "Place",
     "country": "Country",
-    "package": "Package",
-    "code": "Code"
+    "code": "Code",
+    "package": "Package *",
+    "Responsible_name": "Responsible Name *",
+    "position": " Position *",
+    "phone": "Phone *",
+    "contact_person_name": "Contact Person Name*",
+    "contact_person_position": "Position *",
+    "contact_person_phone": "Phone ",
+    "email": " Email*",
+    "notes": "  Notes",
+    "contact_person_code": "Code"
   },
   "button": {
     "next": "Next",
